// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas al componente <GitExpertApp /> Debe de mostrar el componente correctamente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    categories={Array []}
    setCategories={[Function]}
  />
  <hr />
  <div />
</Fragment>
`;

exports[`Pruebas al componente <GitExpertApp /> Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    categories={
      Array [
        "One Punch",
        "Samurai X",
        "Dragon Ball",
      ]
    }
    setCategories={[Function]}
  />
  <hr />
  <div>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Samurai X"
      key="Samurai X"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </div>
</Fragment>
`;
